# extra_Homework

./: pyproject.toml
src/: func 12_2.py  funcs.py  funcs_10.1.py  funcs_10_2.py  funcs_11_1.py
tests/: test_funcs_10_2.py
